@@ -106,6 +106,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
 
+    TAJO-999: SequenceFile key class need to be compatible. (jaehwa)
+
     TAJO-994: 'count(distinct x)' function counts first null value. (hyunsik)
 
     TAJO-996: Sometimes, scheduleFetchesByEvenDistributedVolumes loses
